force-app/main/default/objects/Patient__c/Patient__c.object-meta.xml
<CustomObject>
    <description>Details of the Patient</description>
    <label>Patient</label>
    <nameField>
        <displayFormat>Pt-{0}</displayFormat>
        <label>Patient No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>