force-app/main/default/objects/Patient__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First Name of the Patient</description>
    <inlineHelpText>First Name of the Patient</inlineHelpText>
    <label>First Name</label>
    <length>99</length>
    <required>true</required>
    <type>Text</type>
</CustomField>