force-app/main/default/objects/Patient__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last Name of the Patient</description>
    <inlineHelpText>Last Name of the Patient</inlineHelpText>
    <label>Last Name</label>
    <length>99</length>
    <required>true</required>
    <type>Text</type>
</CustomField>