force-app/main/default/objects/Patient__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <description>Mobile No of the Patient</description>
    <inlineHelpText>Mobile No of the Patient</inlineHelpText>
    <label>Mobile No</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>